--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build:ts": "tsc",
-    "start": "cross-env NODE_PATH=dist/ node dist/"
+    "start": "cross-env NODE_PATH=dist/ node dist/",
+    "dev": "nodemon --config nodemon.json src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -28,10 +29,13 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/node": "^14.14.37",
     "cross-env": "^7.0.3",
     "eslint": "^7.23.0",
+    "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "surge": "^0.22.1",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.2.4"
   }
