--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "scripts": {
     "build": "npm-run-all --parallel build:*",
     "build:ts": "tsc",
+    "build:static": "copyfiles --up 1 \"./src/views/**/*\" \"./src/public/*\" dist/",
     "start": "cross-env NODE_PATH=dist/ node dist/",
-    "dev": "nodemon --config nodemon.json src/index.ts"
+    "dev": "nodemon --config nodemon.json src/index.ts",
+    "surge": "surge -p ./dist/public -d $npm_package_name.surge.sh"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.37",
+    "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "eslint": "^7.23.0",
     "nodemon": "^2.0.7",
