--- a/package.json
+++ b/package.json
@@ -13,7 +13,16 @@
     "build:static": "copyfiles --up 1 \"./src/views/**/*\" \"./src/public/*\" dist/",
     "start": "cross-env NODE_PATH=dist/ node dist/",
     "dev": "nodemon --config nodemon.json src/index.ts",
-    "surge": "surge -p ./dist/public -d $npm_package_name.surge.sh"
+    "surge": "surge -p ./dist/public -d $npm_package_name.surge.sh",
+    "deps:all": "npm ci",
+    "deps:production": "npm ci --production",
+    "heroku-init": "heroku-login && heroku create $npm_package_name",
+    "heroku": "npm-run-all heroku:*",
+    "heroku:login": "heroku container:login",
+    "heroku:push": "heroku container:push web",
+    "heroku:release": "heroku container:release web",
+    "heroku:open": "heroku open",
+    "start:docker": "docker build --tag kilogram:0.0-local . && docker run --rm -d -p 80:80 kilogram:0.0-local"
   },
   "repository": {
     "type": "git",
@@ -28,19 +37,19 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4",
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.37",
     "copyfiles": "^2.4.1",
-    "cross-env": "^7.0.3",
     "eslint": "^7.23.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "surge": "^0.22.1",
-    "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.2.4"
+    "tslint": "^6.1.3"
   }
 }
