--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "build:static": "copyfiles --up 1 \"./src/views/**/*\" \"./src/public/*\" dist/",
     "start": "cross-env NODE_PATH=dist/ node dist/",
     "dev": "nodemon --config nodemon.json src/index.ts",
-    "surge": "surge -p ./dist/public -d $npm_package_name.surge.sh",
+    "surge": "cross-env-shell surge -p ./dist/public -d $npm_package_name.surge.sh",
     "deps:all": "npm ci",
     "deps:production": "npm ci --production",
-    "heroku-init": "heroku-login && heroku create $npm_package_name",
+    "heroku-init": "heroku login && cross-env-shell heroku create $npm_package_name",
     "heroku": "npm-run-all heroku:*",
     "heroku:login": "heroku container:login",
     "heroku:push": "heroku container:push web",
