--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:static": "copyfiles --up 1 \"./src/views/**/*\" \"./src/public/*\" dist/",
     "start": "cross-env NODE_PATH=dist/ node dist/",
     "dev": "nodemon --config nodemon.json src/index.ts",
-    "surge": "surge -p ./dist/public -d $npm_package_name.surge.sh"
+    "surge": "surge -p ./dist/public -d $npm_package_name.surge.sh",
+    "test": "echo No tests yet && exit 0"
   },
   "repository": {
     "type": "git",
