--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:ts": "tsc",
     "build:static": "copyfiles --up 1 \"./src/views/**/*\" \"./src/public/*\" dist/",
     "start": "cross-env NODE_PATH=dist/ node dist/",
+    "herokustart": "npm-run-all --parallel build:* && cross-env NODE_PATH=dist/ node dist/",
     "dev": "nodemon --config nodemon.json src/index.ts",
     "surge": "surge -p ./dist/public -d $npm_package_name.surge.sh"
   },
