--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "dist/index.js",
   "scripts": {
+    "preinstall": "npm install",
     "build": "npm-run-all --parallel build:*",
     "build:ts": "tsc",
     "build:static": "copyfiles --up 1 \"./src/views/**/*\" \"./src/public/*\" dist/",
