--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "preinstall": "npm install --force",
+    "preinstall": "npm install --legacy-peer-deps",
     "build": "npm-run-all --parallel build:*",
     "build:ts": "tsc",
     "build:static": "copyfiles --up 1 \"./src/views/**/*\" \"./src/public/*\" dist/",
