--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,27 @@
 {
   "compilerOptions": {
+    "rootDir": ".",
+    "outDir": "dist/",
+
+    "baseUrl": "./server/",
+
+    "target": "es2018",
+    "lib": ["dom", "es2018"],
     "module": "commonjs",
-    "esModuleInterop": true,
-    "target": "es6",
-    "moduleResolution": "node",
+    "resolveJsonModule": true,
     "sourceMap": true,
-    "outDir": "dist"
-  },
-  "lib": ["es2015"]
+
+    "esModuleInterop": true,
+
+    "strict": true,
+
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+
+    "jsx": "react",
+
+    "typeRoots": [
+      "./@types"
+    ]
+  }
 }
