--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,26 +2,31 @@
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "dist/",
-
     "baseUrl": "./server/",
-
-    "target": "es2018",
-    "lib": ["dom", "es2018"],
-    "module": "commonjs",
-    "resolveJsonModule": true,
-    "sourceMap": true,
-
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": false,
     "esModuleInterop": true,
-
-    "strict": true,
-
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-
-    "jsx": "react",
-
-    "typeRoots": [
-      "./@types"
-    ]
-  }
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve"
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
