--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,13 @@
   "parserOptions": {
     "ecmaVersion": 2018
   },
+  "ecmaFeatures": {
+    "globalReturn": false
+  },
+  "globals": {
+    "React": true,
+    "JSX": true
+  },
   "env": {
     "es6": true
   }
