--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "isomorphic-fetch": "^3.0.0",
     "morgan": "^1.10.0",
