--- a/package.json
+++ b/package.json
@@ -45,14 +45,20 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.0",
+    "express-session": "^1.17.1",
     "isomorphic-fetch": "^3.0.0",
     "morgan": "^1.10.0",
     "next": "^10.1.3",
+    "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sequelize": "^6.6.2",
+    "session-file-store": "^1.5.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
@@ -62,6 +68,8 @@
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.37",
+    "@types/passport": "^1.0.6",
+    "@types/passport-github": "^1.1.5",
     "@types/react": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
