--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "sequelize": "^6.6.2",
     "session-file-store": "^1.5.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "postcss": "^8.3.5"
   },
   "devDependencies": {
     "@linthtml/linthtml": "0.7.0",
@@ -75,15 +76,18 @@
     "@typescript-eslint/parser": "^4.21.0",
     "@yandex-lms-ext/prettier-config": "1.0.2",
     "@yandex-lms-ext/stylelint-config": "1.0.2",
+    "autoprefixer": "^9.8.6",
     "copyfiles": "^2.4.1",
     "eslint": "^7.24.0",
     "eslint-config-hrundel": "latest",
     "lint-staged": "9.3.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
+    "postcss": "^7.0.36",
     "prettier": "^2.2.1",
     "stylelint": "^13.12.0",
     "surge": "^0.22.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.2",
     "tslint": "^6.1.3"
   },
   "lint-staged": {
